--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+
+    # Admin route ke liye exception rule
+    RewriteRule ^admin - [L]
+    
     RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
