--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
     RewriteEngine On
 
     # Admin route ke liye exception rule
-    RewriteRule ^admin - [L] 
+    # RewriteRule ^admin - [L] 
     
     RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
